Fixed all views and other front-end things

--- a/Web/WorkAndTravel.Web/Views/Home/Index.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         </button>
     </div>
 }
-<div class="homePic">
+<body class="homePic m-0 p-0">
     <div class="text-center">
         <h1 class="homeH display-4">Welcome to @GlobalConstants.SystemName!</h1>
         <nav class="navbar justify-content-center">
@@ -25,52 +25,53 @@
             </div>
         </nav>
     </div>
-</div>
-    <h3 class="text-center mt-3 font-weight-bold">Three Categories:</h3>
-    <div class="row container mb-3 mt-4 text-center">
-        <div class="col-md-4 border">
-            <i class="fas fa-hands-helping mt-3 mb-3 fa-3x"></i>
-            <h5 class="font-weight-bold">Volunteer</h5>
-            <p>Volunteering in the EU is a perfect oportunity for every adventurous person.</p>
-        </div>
-        <div class="col-md-4 border">
-            <i class="fas fa-bed mt-3 mb-3 fa-3x"></i>
-            <h5 class="font-weight-bold">Couchsurfing</h5>
-            <p>Couchsurfing in the EU is a perfect oportunity for every person who wants to create relationships with new people.</p>
-        </div>
-        <div class="col-md-4 border">
-            <i class="fas fa-briefcase mt-3 mb-3 fa-3x"></i>
-            <h5 class="font-weight-bold">Working abroad</h5>
-            <p>Working abroad can give you a valuable experience which will help you in your next jobs.</p>
-        </div>
+</body>
+
+<h3 class="text-center mt-3 font-weight-bold">Three Categories:</h3>
+<div class="row container mb-3 mt-4 text-center">
+    <div class="col-md-4 borderHome">
+        <i class="fas fa-hands-helping mt-3 mb-3 fa-3x"></i>
+        <h5 class="font-weight-bold">Volunteering</h5>
+        <p class="font-weight-bold">Volunteering in the EU is a perfect oportunity for every adventurous person.</p>
     </div>
+    <div class="col-md-4 borderHome">
+        <i class="fas fa-bed mt-3 mb-3 fa-3x"></i>
+        <h5 class="font-weight-bold">Couchsurfing</h5>
+        <p class="font-weight-bold">Couchsurfing in the EU is a perfect oportunity for every person who wants to create relationships with new people.</p>
+    </div>
+    <div class="col-md-4 borderHome">
+        <i class="fas fa-briefcase mt-3 mb-3 fa-3x"></i>
+        <h5 class="font-weight-bold">Working abroad</h5>
+        <p class="font-weight-bold">Working abroad can give you a valuable experience which will help you in your next jobs.</p>
+    </div>
+</div>
 <h3 class="text-center mt-3 font-weight-bold">Also..</h3>
 
 <div class="row container mb-3 mt-4 text-center">
-    <div class="col-md-4 border">
+    <div class="col-md-4 borderHome">
         <i class="fas fa-briefcase mt-3 mb-3 fa-3x"></i>
         <h5 class="font-weight-bold">@Model.WorkPostsCount</h5>
-        <p>Work Posts</p>
+        <p class="font-weight-bold">Work Posts</p>
     </div>
-    <div class="col-md-4 border">
+    <div class="col-md-4 borderHome">
         <i class="fas fa-globe-europe mt-3 mb-3 fa-3x"></i>
         <h5 class="font-weight-bold">@Model.CountriesCount</h5>
-        <p>Countries</p>
+        <p class="font-weight-bold">Countries</p>
     </div>
-    <div class="col-md-4 border">
+    <div class="col-md-4 borderHome">
         <i class="fas fa-city mt-3 mb-3 fa-3x"></i>
         <h5 class="font-weight-bold">@Model.CitiesCount</h5>
-        <p>Cities</p>
+        <p class="font-weight-bold">Cities</p>
     </div>
 </div>
 
 <h3 class="text-center mt-3 mb-3 font-weight-bold">Top 3 highest rated posts</h3>
 
-<div class="row mb-2  ml-2">
+<div class="row mb-5 ml-2">
     @foreach (var post in this.Model.WorkPosts)
     {
-        <div class="card-deck card-columns media col-md-4  mr-2">
-            <div class="card">
+        <div class="card-deck card-columns media col-md-4 mr-2">
+            <div class="card borderHome" >
                 <img src="@post.RemoteImageUrl" class="card-img-top">
                 <div class="card-body">
                     <h5 class="card-title"><a asp-action="ById" asp-route-id="@post.Id">@post.Title</a></h5>
