--- a/Web/WorkAndTravel.Web/Views/Account/Applicants.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Account/Applicants.cshtml
@@ -4,7 +4,7 @@
     this.ViewData["Title"] = "Applicants to my posts";
 }
 
-<h1>@this.ViewData["Title"]</h1>
+<h1 class="text-primary">@this.ViewData["Title"]</h1>
 <hr />
 @foreach (var item in Model)
 {
