--- a/Web/WorkAndTravel.Web/Views/Account/Applications.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Account/Applications.cshtml
@@ -3,10 +3,18 @@
 @{
     this.ViewData["Title"] = "Posts you have applied to";
 }
+@if (this.TempData.ContainsKey("Message"))
+{
+    <div class="alert alert-warning alert-dismissible fade show">
+        @this.TempData["Message"]
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
 
-<h1>@this.ViewData["Title"]</h1>
+<h1 class="text-primary">@this.ViewData["Title"]</h1>
 <hr />
-<p><b>After you have applied to a post, the creator will contact you via email.</b></p>
 @foreach (var item in Model)
 {
     <table class="table table-bordered table-hover table-striped">
