--- a/Web/WorkAndTravel.Web/Views/Account/Index.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Account/Index.cshtml
@@ -5,10 +5,10 @@
 
 @if (this.User.Identity.IsAuthenticated)
 {
-    <a class="btn btn-primary mt-2 float-right mr-3" asp-area="" asp-action="MyPosts">My posts</a>
-    <a class="btn btn-primary mt-2 float-right mr-3" asp-area="" asp-action="Applications">My applications</a>
+    <a class="btn btn-outline-primary mt-2 float-right mr-3" asp-area="" asp-action="MyPosts">My posts</a>
+    <a class="btn btn-outline-primary mt-2 float-right mr-3" asp-area="" asp-action="Applications">My applications</a>
 
-    <h1>@this.ViewData["Title"]</h1>
+    <h1 class="text-primary">@this.ViewData["Title"]</h1>
     <hr />
     <div>
         <div class="row">
