--- a/Web/WorkAndTravel.Web/Views/Account/MyPosts.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Account/MyPosts.cshtml
@@ -7,26 +7,29 @@
 {
     if (Model.WorkPosts.Any())
     {
-        <a class="btn btn-primary" asp-area="" asp-action="Applicants">Applicants</a>
+        <a class="btn btn-outline-primary" asp-area="" asp-action="Applicants">Applicants</a>
     }
-    <a class="btn btn-primary float-right" asp-area="Identity" asp-page="/Account/Manage/Index">Profile Settings</a>
-    <h1>This is the page where you can see your posts!</h1>
+    <a class="btn btn-outline-primary float-right" asp-area="Identity" asp-page="/Account/Manage/Index">Profile Settings</a>
+    <h1 class="text-primary mb-3 mt-3">This is the page where you can see your posts!</h1>
     if (Model.WorkPosts.Any())
     {
-        <div class="row">
-            @foreach (var post in this.Model.WorkPosts)
-            {
-                <div class="card-deck card-columns media col-md-3">
-                    <div class="card">
-                        <img src="@post.RemoteImageUrl" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title"><a asp-controller="WorkPost" asp-action="ById" asp-route-id="@post.Id">@post.Title</a></h5>
-                            <p class="card-text ">@post.Description.Substring(0, 35) ...</p>
-                            <p class="card-text"><small class="text-muted">@post.CategoryName</small></p>
+        <div class="container">
+            <div class="row">
+                @foreach (var post in this.Model.WorkPosts)
+                {
+                    var title = post.Title.Substring(0, 14);
+                    <div class="col-md-3 mb-4">
+                        <div class="card">
+                            <img src="@post.RemoteImageUrl" style="height:300px; width:246px;" class="card-img-top img-fluid">
+                            <div class="card-body">
+                                <h5 class="card-title"><a asp-action="ById" asp-route-id="@post.Id">@title</a></h5>
+                                <p class="card-text ">@post.Description.Substring(0, 35) ...</p>
+                                <p class="card-text"><small class="text-muted">@post.CategoryName</small></p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            }
+                }
+            </div>
         </div>
     }
     else
