--- a/Web/WorkAndTravel.Web/wwwroot/css/style.css
+++ b/Web/WorkAndTravel.Web/wwwroot/css/style.css
@@ -530,8 +530,6 @@ a.w3-buttons {
     background: #000;
     border-radius: 4px;
     -webkit-border-radius: 4px;
-    -o-border-radius: 4px;
-    -ms-border-radius: 4px;
     -moz-border-radius: 4px;
     display: inline-block;
     font-size: 14px;
@@ -540,7 +538,6 @@ a.w3-buttons {
     -webkit-transition: 0.5s all;
     -moz-transition: 0.5s all;
     -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;
     transition: 0.5s all;
 }
 
@@ -551,7 +548,6 @@ a.w3-buttons {
     -webkit-transition: 0.5s all;
     -moz-transition: 0.5s all;
     -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;
 }
 
     .ser-tp:hover {
@@ -562,7 +558,6 @@ a.w3-buttons {
         -webkit-transition: 0.5s all;
         -moz-transition: 0.5s all;
         -o-transition: 0.5s all;
-        -ms-transition: 0.5s all;
     }
 
 .agileits-services-row-2 {
@@ -580,7 +575,6 @@ a.w3-buttons {
     -webkit-transition: 0.5s all;
     -moz-transition: 0.5s all;
     -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;
     transition: 0.5s all;
 }
 /*-- //services --*/
@@ -638,10 +632,6 @@ h3.subheading-w3-agile {
 .middle-w3l {
     background: url(../images/bg1.jpg)no-repeat;
     background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    -ms-background-size: cover;
 }
 
     .middle-w3l h2 {
@@ -1285,7 +1275,6 @@ a.facebook {
     -webkit-transition: .3s;
     -moz-transition: .3s;
     -o-transition: .3s;
-    -ms-transition: .3s;
 }
 
     .gallery-box img {
@@ -1301,11 +1290,9 @@ img.zoom-img {
     transition-timing-function: ease-out;
     -webkit-transition-timing-function: ease-out;
     -moz-transition-timing-function: ease-out;
-    -ms-transition-timing-function: ease-out;
     -o-transition-timing-function: ease-out;
     -webkit-transition-duration: .5s;
     -moz-transition-duration: .5s;
-    -ms-transition-duration: .5s;
     -o-transition-duration: .5s;
 }
 
@@ -1319,9 +1306,7 @@ img.zoom-img {
         -webkit-transition-duration: 750ms;
         -moz-transition-timing-function: ease-in-out;
         -moz-transition-duration: 750ms;
-        -ms-transition-timing-function: ease-in-out;
         -o-transition-timing-function: ease-in-out;
-        -ms-transition-duration: 750ms;
         -o-transition-duration: 750ms;
         overflow: hidden;
     }
@@ -1337,8 +1322,6 @@ img.zoom-img {
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
-    -o-border-radius: 50%;
-    -ms-border-radius: 50%;
 }
 
 .address-grid-wthree-agileits {
@@ -1404,7 +1387,6 @@ img.zoom-img {
         -webkit-transition: 0.5s all;
         -moz-transition: 0.5s all;
         -o-transition: 0.5s all;
-        -ms-transition: 0.5s all;
         transition: 0.5s all;
         font-weight: 600;
         cursor: pointer;
@@ -1708,7 +1690,6 @@ img.zoom-img {
     overflow: hidden;
     float: right;
     opacity: 0;
-    -moz-opacity: 0;
     filter: alpha(opacity=0);
 }
 /*-- //to-top --*/
@@ -1797,7 +1778,6 @@ img.zoom-img {
         -webkit-transition: 0.5s all;
         -moz-transition: 0.5s all;
         -o-transition: 0.5s all;
-        -ms-transition: 0.5s all;
     }
 
         .navbar-light .navbar-toggler:hover {
@@ -2277,15 +2257,26 @@ div.mySearch{
 
 /*Home pic*/
 
-div.homePic {
-    background-image: url('https://wallpaperaccess.com/full/185289.jpg');
+.homePic {
+    background-image: url('https://wallpaperaccess.com/full/185289.jpg') !important;
+    background-repeat: no-repeat !important;
+    background-size: 100% 36%;
+    background-position: center top !important;
+    position:relative;
+}
+
+/*contact us*/
+body.contactUs {
+    background-image: url('https://lorencofolio.com/wp-content/uploads/2018/02/contact-us-icon-e1460644708793.jpg');
     background-repeat: no-repeat;
     background-size: 80% auto;
-    background-position: center top;
+    background-position: center;
     background-attachment: fixed;
 }
+
 nav.navbar{
     background: transparent !important;
+    border-bottom: 1px solid black;
 }
 h1.homeH{
     margin-top: 50px;
@@ -2294,4 +2285,13 @@ h1.homeH{
 img.snimka{
     height:500px;
     width:250px;
+}
+
+img.navImage {
+    height: 100px;
+    width: 100px;
+}
+
+div.borderHome{
+    border:1px solid black;
 }
