Tests and view changes

--- a/Web/WorkAndTravel.Web/Views/Account/Index.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Account/Index.cshtml
@@ -17,7 +17,7 @@
                     <div class="member-card">
                         <ul>
                             <li class="thumb-xl member-thumb m-b-10 center-block">
-                                <img src="@Model.ProfilePictureUrl" class="img-circle img-thumbnail img-fluid" alt="profile-image">
+                                <img src="@Model.ProfilePictureUrl" style="height:250px; width:300px;" class="img-circle img-thumbnail img-fluid" alt="profile-image">
                             </li>
 
                             <li class="col-lg-12 mt-3 w-100">
