--- a/Web/WorkAndTravel.Web/Views/Shared/_Layout.cshtml
+++ b/Web/WorkAndTravel.Web/Views/Shared/_Layout.cshtml
@@ -64,6 +64,7 @@
                 <div class="container">
                     &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a asp-area="" asp-controller="WorkPost" asp-action="All">All posts</a>
                     <a asp-area="" asp-controller="WorkPost" asp-action="Create">Create post</a>
+                    <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                 </div>
             </footer>
         @*</div>*@
